# arhiv

./: .dir-locals.el  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .ignore  .oxfmtrc.json  .oxlintrc.json  .oxlintrc.shared.json  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  PKGBUILD.template  README.md  arhiv.md  bump-version.sh  dev-server.sh  dev-web-app.sh  dev.sh  eslint.config.js  justfile  loader.js  node.js  node.sh  package-lock.json  package.json  rollup-plugin-css.js  rollup.config.js  rust-toolchain.toml  stencil.config.ts  test.sh  tsconfig.json  tslint.json  vnode  web-app.rollup.config.js  webpack.config.js
app-shell/: Cargo.toml  justfile
app-shell/src/: builder.rs  context.rs  file_picker.rs  html_template.rs  lib.rs  main.rs  rpc.d.ts  rpc.js  rpc.network.js  rpc_message.rs  webview.rs
app-shell/static/: app.html  index.html
arhiv/: .gitignore  .oxlintrc.json  Cargo.toml  PKGBUILD  PKGBUILD.template  README.md  arhiv-prime-server.service  arhiv-prime-server@.service  arhiv-prime.json.example  arhiv.json.example  arhiv.json.prime-example  arhiv.json.replica-example  arhiv.json.template  build.rs  build.ts  package.json  start-server.sh  tailwind.config.ts  tsconfig.json  v.arhiv.ui.desktop
arhiv-android/: .gitignore  Cargo.toml  build.gradle  build.rs  gradle.properties  settings.gradle  settings.gradle.kts
arhiv-android/app/: build.gradle  build.gradle.kts
arhiv-android/src/: keyring.rs  lib.rs
arhiv-bin/: Cargo.toml  PKGBUILD.template
arhiv-bin/completions/: .gitignore
arhiv-bin/resources/: v.arhiv.ui.desktop
arhiv-bin/src/: cli.rs  import.rs  lib.rs  main.rs
arhiv-core/: Cargo.toml
arhiv-core/src/: api.rs  arhiv.rs  backup.rs  commander.rs  config.rs  data_definitions.rs  import.rs  lib.rs  path_manager.rs  prime_server.rs  scraper.rs  settings.rs  status.rs  sync.rs  test_arhiv.rs  validator.rs
arhiv-import/: .eslintrc.js  Cargo.toml  build.rs  package.json  tsconfig.json
arhiv-import/src/: ActionChannel.ts  attachment-image.ts  attachment.rs  book-yakaboo.js  book-yakaboo.ts  book_yakaboo.rs  context.ts  film-imdb.ts  film_imdb.rs  index.js  index.ts  lib.rs  main.rs  utils.rs  utils.ts
arhiv-modules/: Cargo.toml
arhiv-modules/src/: generator.rs  lib.rs  note.rs  notes.rs  project.rs  task.rs
arhiv-tools/: Cargo.toml
arhiv-tools/src/: lib.rs
arhiv-ui/: .eslintrc.cjs  Cargo.toml  PKGBUILD  build.rs  build.ts  justfile  package.json  tailwind.config.cjs  tsconfig.json  webpack.config.js
arhiv-ui/scripts/: faker.ts
arhiv-ui/src/: App.tsx  commander.rs  dto.rs  dto.ts  index.tsx  lib.rs  main.rs  scraper.rs  server.rs
arhiv-ui/static/: index.html
arhiv-ui/web/: App.tsx  Card.tsx  Metadata.tsx  Url.tsx  data-description.ts  data-manager.ts  index.tsx  notes.ts  types.ts
arhiv-ui3/: .eslintrc.js  .gitignore  Cargo.toml  build.js  build.rs  build.ts  package.json  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  windi.config.js
arhiv-ui3/public/: reset.css
arhiv-ui3/src/: app_context.rs  attachment_data.rs  base.html  base.html.tera  catalog_index_page.html  catalog_index_page.rs  catalog_page.html  catalog_page.html.tera  catalog_page.rs  document_editor_page.html  document_editor_page.rs  document_page.html.tera  document_page.rs  dto.rs  dto.ts  http_utils.rs  index.css  index.js  index.ts  index_page.html  index_page.html.tera  index_page.rs  lib.rs  main.rs  markup.rs  not_found_page.html  not_found_page.rs  public_assets.rs  public_assets_handler.rs  routes.rs  rpc.rs  styles.html  templates.rs  ui_config.rs  urls.rs  utils.rs
arhiv-ui3/templates/: base.html.tera  catalog_index_page.html.tera  catalog_page.html.tera  index_page.html.tera  modal.html.tera  not_found_page.html.tera  styles.html
arhiv-utils/: Cargo.toml
arhiv-utils/src/: lib.rs
arhiv/scripts/: check-dto-sync.ts
arhiv/src/: arhiv.rs  client.rs  commander.rs  config.rs  data_service.rs  dto.rs  dto.ts  entities.rs  fs_transaction.rs  import.rs  lib.rs  main.rs  path_manager.rs  repository.rs  scaled_images_cache.rs  scraper.rs  server.rs  status.rs  utils.rs
arhiv/tests/: arhiv_test.rs  attachments.rs  attachments_test.rs  crud.rs  crud_tests.rs  query.rs  query_test.rs  sync.rs  sync_test.rs  temp_arhiv.rs  utils.rs
baza/: Cargo.toml
baza-common/: Cargo.toml
baza-common/src/: fs.rs  fs_temp.rs  fs_transaction.rs  lib.rs  lock_file.rs  string.rs  time.rs
baza-server/: Cargo.toml
baza-server/src/: lib.rs  rpc_client.rs  rpc_server.rs
baza-storage/: Cargo.toml
baza-storage/benches/: container_benchmark.rs
baza-storage/src/: compression.rs  container.rs  lib.rs
baza-storage/tests/: container.rs
baza/src/: auto_commit_service.rs  backup.rs  baza.rs  baza_paths.rs  data_migration.rs  document_expert.rs  events.rs  http.rs  lib.rs  merge.rs  merge_expert.rs  path_manager.rs  search.rs  sync.rs  validator.rs
binutils/: Cargo.toml  PKGBUILD  PKGBUILD.template  justfile
binutils/resources/: arhiv-server.service  arhiv-server@.service  arhiv-ui-server.service  arhiv.json.template  v.arhiv.ui.desktop
binutils/src/: lib.rs  notify.rs  utils.rs
poshta/: Cargo.toml  package.json  tokencache.json  webpack.config.js
poshta/src/: main.rs
poshta/static/: index.html
poshta/web/: App.tsx  MessageFull.tsx  MessageShort.tsx  ResizeObserver.d.ts  Sandbox.tsx  gmail.ts  index.tsx  poshta-store.ts
rs-utils/: Cargo.toml
rs-utils/benches/: container_benchmark.rs  zip_age_benchmark.rs
rs-utils/src/: algorithms.rs  bytes.rs  compression.rs  config.rs  container.rs  crypto.rs  env_capabilities.rs  fs.rs  fs_temp.rs  fs_transaction.rs  http.rs  http_server.rs  image.rs  iter.rs  json.rs  keyring.rs  lib.rs  lock_file.rs  log.rs  mdns.rs  merge.rs  streams.rs  string.rs  time.rs  tools.rs  zip_age.rs
rs-utils/tests/: container.rs
scraper/: Cargo.toml  build.js  build.rs  build.ts  package.json
scraper/src/: browser-scraper.ts  full_page_screenshot.rs  lib.rs  main.rs  node-scraper-helpers.ts  node-scraper.ts  scrape_result.rs  scraper-ui.html  scraper.ts  utils.ts
(+2188 files in other folders)
