# speed up debug builds
[profile.dev]
debug = 0

[workspace]
resolver = "2"
members = [
  "baza",
  "arhiv",
  "arhiv-tools",
  "binutils",
  "rs-utils",
  "scraper"
]

[workspace.dependencies]
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3"
tokio = { version = "1", features = ["fs", "macros", "signal", "process", "rt-multi-thread", "test-util"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }

async-trait = "0.1.68"

reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["http1", "server", "stream"] }
axum = { version = "0.6.20", features = ["headers", "tracing"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3", features = ["local-offset", "macros"] }

lazy_static = "1.4.0"
rand = "0.8.2"

insta = { version = "1", features = ["redactions", "json"] }
