[package]
name = "app-shell"
version = "0.1.0"
authors = ["mbme"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

webkit2gtk = { version = "0.10", features = ["v2_16"] }
webkit2gtk-sys = { version = "", features = ["v2_16"] }

gtk = { version = "0.9", features = ["v3_16", "embed-lgpl-docs"] }
gio = { version = "", features = ["v2_44"] }
gdk = ""
glib = ""

# [dev-dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
