[package]
name = "app-shell"
version = "0.1.0"
authors = ["mbme"]
edition = "2018"

[features]
dev-server = []

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.36"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

webkit2gtk = { version = "0.11.0", features = ["v2_16"] }
webkit2gtk-sys = { version = "0.13.0", features = ["v2_16"] }

gtk = { version = "0.9.2", features = ["v3_16"] }
gio = { version = "0.9.1", features = ["v2_44"] }
gdk = "0.13.2"
glib = "0.10.3"
async-trait = "0.1.42"

warp = "0.2.5"
tokio = { version = "0.2", features = ["macros", "signal", "sync"] }
rs-utils = { path = "../rs-utils" }
