[package]
name = "app-shell"
version = "0.1.0"
authors = ["mbme"]
edition = "2018"

[features]
dev-server = []

[dependencies]
tracing = "0.1"

anyhow = "1.0.38"

serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"

webkit2gtk = { version = "0.11.0", features = ["v2_16"] }
webkit2gtk-sys = { version = "0.13.0", features = ["v2_16"] }

gtk = { version = "0.9.2", features = ["v3_16"] }
gio = { version = "0.9.1", features = ["v2_44"] }
gdk = "0.13.2"
glib = "0.10.3"
async-trait = "0.1.42"

warp = "0.3.0"
tokio = { version = "1.0.2", features = ["macros", "signal", "sync", "rt-multi-thread"] }
rs-utils = { path = "../rs-utils" }
