[package]
name = "arhiv-android"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
production-mode = ["arhiv/production-mode"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
jni = "0.21"

arhiv = { path = "../arhiv", features = ["debug-embed"] }
rs-utils = { path = "../rs-utils" }

[build-dependencies]
rs-utils = { path = "../rs-utils" }
