[package]
name = "arhiv-bin"
version = "0.0.0"
authors = ["mbme"]
edition = "2021"
publish = false

[features]
production-mode = ["arhiv-core/production-mode"]

[dependencies]
anyhow = "1.0.38"

clap = { version = "3.0", features = ["color", "env"] }
clap_complete = "3.0"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }

rs-utils = { path = "../rs-utils" }
arhiv-core = { path = "../arhiv-core" }
arhiv-ui3 = { path = "../arhiv-ui3" }
