[package]
name = "arhiv-core"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lib]
doctest = false

[features]
production-mode = []

[dependencies]
anyhow = "1.0.38"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

aho-corasick = "0.7"

futures = "0.3"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }

reqwest = { version = "0.11", features = ["json", "stream"] }
nanoid = "0.4.0"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }

hyper = { version = "0.14", features = ["http1", "server"] }
routerify = "3"

rusqlite = { version = "0.27", features = ["chrono", "serde_json", "functions"] }

rs-utils = { path = "../rs-utils" }
scraper = { path = "../scraper" }

fslock = "0.2.1"
lazy_static = "1.4.0"
