[package]
name = "arhiv-core"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lib]
doctest = false

[features]
production-mode = []

[dependencies]
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

aho-corasick = "0.7"

futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

reqwest.workspace = true
nanoid = "0.4.0"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd", "serde"] }

hyper.workspace = true
routerify.workspace = true

rusqlite = { version = "0.28", features = ["chrono", "serde_json", "functions"] }

rs-utils = { path = "../rs-utils" }
scraper = { path = "../scraper" }

fslock = "0.2.1"
lazy_static.workspace = true

[dev-dependencies]
insta.workspace = true
