[package]
name = "arhiv-core"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lib]
doctest = false

[features]
production-mode = []

[dependencies]
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

reqwest.workspace = true

hyper.workspace = true
routerify.workspace = true

baza = { path = "../baza" }
rs-utils = { path = "../rs-utils" }
scraper = { path = "../scraper" }

[dev-dependencies]
insta.workspace = true
