[package]
name = "arhiv-import"
version = "0.1.0"
edition = "2018"

[dependencies]
arhiv-core = { path = "../arhiv-core" }
rs-utils = { path = "../rs-utils" }

anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }

dialoguer = "0.8.0"
