[package]
name = "arhiv-import"
version = "0.0.0"
edition = "2018"
authors = ["mbme"]
publish = false

[dependencies]
arhiv-core = { path = "../arhiv-core" }
rs-utils = { path = "../rs-utils" }

anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
async-trait = "0.1"

dialoguer = "0.8.0"

url = "2.2.2"

[dev-dependencies]
insta = "1.7.2"
