[package]
name = "arhiv-import"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[dependencies]
arhiv-core = { path = "../arhiv-core" }
rs-utils = { path = "../rs-utils" }

anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread", "process"] }

dialoguer = "0.9.0"

[dev-dependencies]
insta = { version = "1", features = ["redactions", "backtrace"] }

[build-dependencies]
rs-utils = { path = "../rs-utils" }
