[package]
name = "arhiv-modules"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.36"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
arhiv = { path = "../arhiv" }
rs-utils = { path = "../rs-utils" }
rand = "0.8.0"
pulldown-cmark  = "0.8.0"
