[package]
name = "arhiv-tools"
version = "0.0.0"
authors = ["mbme"]
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true

baza = { path = "../baza" }
arhiv-ui = { path = "../arhiv-ui" }
rs-utils = { path = "../rs-utils" }
