[package]
name = "arhiv-ui"
version = "0.1.0"
edition = "2018"

[features]
production-mode = ["arhiv/production-mode"]

[dependencies]
anyhow = "1.0.38"

serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"

tokio = { version = "1.0.2", features = ["macros"] }

arhiv = { path = "../arhiv" }
rs-utils = { path = "../rs-utils" }

rust-embed= { version = "5.8.0", features = ["interpolate-folder-path"]}

mime_guess = "2.0.3"
warp = "0.3.0"
