[package]
name = "arhiv-ui"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[dependencies]
arhiv-core = { path = "../arhiv-core" }
rs-utils = { path = "../rs-utils" }

anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
hyper.workspace = true
routerify.workspace = true

rust-embed= { version = "6", features = ["interpolate-folder-path"]}

[build-dependencies]
rs-utils = { path = "../rs-utils" }
