[package]
name = "arhiv-ui3"
version = "0.1.0"
edition = "2018"

[dependencies]
arhiv = { path = "../arhiv" }

anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["tera_templates"] }

tera = { version = "1", default-features = false, features = ["chrono"]}
chrono = { version = "0.4", features = ["serde"] }
