[package]
name = "arhiv-ui3"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[dependencies]
arhiv-core = { path = "../arhiv-core" }
arhiv-import = { path = "../arhiv-import" }
rs-utils = { path = "../rs-utils" }

anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "server"] }
routerify = "2"

tera = { version = "1", features = ["chrono"]}
chrono = { version = "0.4", features = ["serde"] }

rust-embed= { version = "6", features = ["interpolate-folder-path"]}

[build-dependencies]
rs-utils = { path = "../rs-utils" }
