[package]
name = "arhiv-utils"
version = "0.0.0"
authors = ["mbme"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.38"
rand = "0.8.2"
serde_json = "1.0.61"
tokio = { version = "1.0.2", features = ["macros"] }

arhiv-core = { path = "../arhiv-core" }
rs-utils = { path = "../rs-utils" }
