[package]
name = "arhiv"
version = "0.0.0"
edition = "2024"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[lib]
doctest = false

[features]
production-mode = ["baza/production-mode"]

[dependencies]
baza = { path = "../baza" }
rs-utils = { path = "../rs-utils" }

anyhow.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true

futures.workspace = true
tokio.workspace = true

axum.workspace = true
axum-extra.workspace = true

reqwest.workspace = true

rust-embed= { version = "8", features = ["interpolate-folder-path"]}

[build-dependencies]
rs-utils = { path = "../rs-utils" }
