[package]
name = "arhiv"
version = "0.0.0"
edition = "2024"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[lib]
doctest = false

[features]
production-mode = ["baza/production-mode"]
embed-public = []

[dependencies]
baza = { path = "../baza" }
rs-utils = { path = "../rs-utils" }

anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

futures.workspace = true
tokio.workspace = true

axum.workspace = true
axum-extra.workspace = true

tinytemplate.workspace = true

include_dir = "0.7" # embed files into binary

rayon.workspace = true
