[package]
name = "baza-server"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lib]
doctest = false

[features]
production-mode = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true

reqwest.workspace = true
hyper.workspace = true
routerify.workspace = true

mdns-sd = "0.7.4"

rs-utils = { path = "../rs-utils" }
baza = { path = "../baza" }
