[package]
name = "baza"
version = "0.0.0"
edition = "2024"
authors = ["mbme"]
publish = false

[lib]
doctest = false

[lints]
workspace = true

[features]
production-mode = []

[dependencies]
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true

aho-corasick = "1.1.0"

pulldown-cmark = { version = "0.13", default-features = false, features = ["simd", "serde"] }

tinytemplate = "1"

ordermap.workspace = true

thiserror = "2" # macro for better errors

rs-utils = { path = "../rs-utils" }

[dev-dependencies]
insta.workspace = true
