[package]
name = "baza"
version = "0.0.0"
edition = "2024"
authors = ["mbme"]
publish = false

[lib]
doctest = false

[lints]
workspace = true

[features]
production-mode = []

[dependencies]
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
rayon.workspace = true

pulldown-cmark = { version = "0.13", default-features = false, features = ["simd", "serde"] }

postcard = { version = "1",  default-features = false, features = ["use-std"] }

ordermap.workspace = true

thiserror = "2" # macro for better errors
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }
url = "2.2.2"
similar = { version = "2.7", features = ["unicode"] }
strsim = "0.11"
charabia = { version = "0.9", default-features = false }
deunicode = "1.6"
regex = "1.5.4"

baza-common = { path = "../baza-common" }
baza-storage = { path = "../baza-storage" }

[dev-dependencies]
insta.workspace = true
