[package]
name = "binutils"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[features]
production-mode = ["arhiv/production-mode"]

[dependencies]
anyhow.workspace = true

clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.0"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true

baza = { path = "../baza" }
rs-utils = { path = "../rs-utils" }
arhiv = { path = "../arhiv" }
