[package]
name = "poshta"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
yup-oauth2 = "4.0"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

app-shell = { path = "../app-shell" }
