[package]
name = "poshta"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.36"
yup-oauth2 = "4.1.3"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10.10", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

app-shell = { path = "../app-shell" }
