[package]
name = "rs-utils"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[[bench]]
name = "container_benchmark"
harness = false

[dependencies]
log = "0.4"
tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true

futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

serde.workspace = true
serde_json.workspace = true

hyper.workspace = true
reqwest.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true

bytes.workspace = true
rand.workspace = true
chrono.workspace = true
ordermap.workspace = true

argon2 = "0.5.3" # derive secure cryptographic key from password & salt
blake3 = "1.2" # fast crypto hash, PBKDF, HMAC
sha2 = "0.10" # popular crypto hash
hmac = "0.12" # generic HMAC implementation
hkdf = "0.12" # generic HKDF implementation
chacha20 = "0.9" # fast modern cypher
zeroize =  { version = "1.8", features = ["zeroize_derive"]}# replace secrets in memory with 0s after use
rcgen = "0.13" # generate self-signed certificates
pem = "*" # serialize TLS private key & certificate into PEM file

data-encoding = "2" # base64, hex encodings
mime_guess = "2"
infer = "0.19"
url = "2.2.2"
regex = "1.5.4"
image = "0.25" # encode/decode/scale images, guess image types
shellexpand = "3.0.0"
which = "7"
nanoid = "0.4.0" # generate short unique global ids
mdns-sd = "0.13" # for MDNS discovery
gethostname = "1" # for MDNS discovery
rayon = "1.8.0"
fslock = "0.2"
flate2 = "1" # for compressed container

[target.'cfg(android)'.dependencies]
tracing-android = "0.2"

[dev-dependencies]
criterion = "0.5"
