[package]
name = "rs-utils"
version = "0.0.0"
edition = "2024"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[[bench]]
name = "container_benchmark"
harness = false

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

anyhow.workspace = true

futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

serde.workspace = true
serde_json.workspace = true

axum.workspace = true
axum-extra.workspace = true
axum-server = { version= "0.7", features = ["tls-rustls-no-provider"]}

bytes.workspace = true
rand.workspace = true
chrono.workspace = true
ordermap.workspace = true

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }

scrypt = { version = "0.11", default-features = false } # derive secure cryptographic key from password & salt
sha2 = "0.10" # popular crypto hash
hmac = "0.12" # generic HMAC implementation
hkdf = "0.12" # generic HKDF implementation
secrecy = { version = "0.10", features = ["serde"]} # replace secrets in memory with 0s after use

age = "0.11" # file encryption format

rcgen = "0.13" # generate self-signed certificates
pem = "*" # serialize TLS private key & certificate into PEM file

data-encoding = "2" # base64, hex encodings
mime_guess = "2"
infer = "0.19"
url = "2.2.2"
regex = "1.5.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"]} # encode/decode/scale images, guess image types
shellexpand = "3.0.0"
which = "7"
nanoid = "0.4.0" # generate short unique global ids
fslock = "0.2"
flate2 = "1" # for compressed container
async-stream = "0.3" # macro for creating async streams

# read password from platform-specific secure stores
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

tracing-android = "0.2" # tracing compatibility layer for android

[dev-dependencies]
criterion = "0.5"
