[package]
name = "rs-utils"
version = "0.0.0"
edition = "2024"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[[bench]]
name = "container_benchmark"
harness = false

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

anyhow.workspace = true

futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

serde.workspace = true
serde_json.workspace = true

axum.workspace = true
axum-extra.workspace = true
axum-server = { version= "0.7", features = ["tls-rustls-no-provider"]}

bytes.workspace = true
rand.workspace = true
ordermap.workspace = true
rayon.workspace = true

time = { version = "0.3", features = ["formatting", "serde", "local-offset"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }

scrypt = { version = "0.11", default-features = false } # derive secure cryptographic key from password & salt
sha2 = "0.10" # popular crypto hash
hmac = "0.12" # generic HMAC implementation
hkdf = "0.12" # generic HKDF implementation
secrecy = { version = "0.10", features = ["serde"]} # replace secrets in memory with 0s after use

age = { version = "0.11", features = ["armor"] } # file encryption format

rcgen = "0.14" # generate self-signed certificates
pem = "*" # serialize TLS private key & certificate into PEM file

data-encoding = "2" # base64, hex encodings
mime_guess = "2"
infer = "0.19"
url = "2.2.2"
regex = "1.5.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"]} # encode/decode/scale images, guess image types
qrcode = "0.14" # generate QRCodes
shellexpand = "3.0.0"
which = "8"
nanoid = "0.4.0" # generate short unique global ids
fslock = "0.2"
flate2 = "1" # for compressed container
async-stream = "0.3" # macro for creating async streams
similar = { version = "2.7", features = ["unicode"] } # diff two strings
subst = "0.3" # simple string templates

# search engine
strsim = "0.11" # string similarity
charabia = { version = "0.9", default-features = false } # tokenization & normalization for search
deunicode = "1.6" # turn translate unicode strings and emojis into ASCII

tracing-android = "0.2" # tracing compatibility layer for android

[dev-dependencies]
criterion = "0.7"
