[package]
name = "scraper"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lints]
workspace = true

[dependencies]
rs-utils = { path = "../rs-utils" }

anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true

fantoccini = { version = "0.20.0-rc.7", default-features = false, features = ["rustls-tls"] }
url = "2.2"
http = "0.2"
cookie = "0.17"

[dev-dependencies]
insta.workspace = true

[build-dependencies]
rs-utils = { path = "../rs-utils" }
